add quarkus demo